S109: author submitted new files which addressed length issues

--- a/papers/109/source/AI-main.tex
+++ b/papers/109/source/AI-main.tex
@@ -41,24 +41,16 @@ Despite these benefits, AI raises significant pedagogical and ethical concerns. 
 
 \subsection{Research Gaps and Study Objectives}
 
-Although the existing literature explores AI's technological capabilities and instructional applications, fewer studies focus on student-reported experiences and behavioral decisions, especially in writing-intensive college courses \cite{willia2024ai, chan2023students}. This study addresses this gap by investigating student perceptions of AI’s usefulness in writing and comprehension in the IT Professional Ethics and Practices course at Georgia Gwinnett College. Conducted in Fall 2024 and Spring 2025, the study follows a three-phase structure: no AI use, required AI use, and optional continued AI use. Our research seeks to understand whether students perceive AI as a tool for efficiency, a learning scaffold, or a barrier to critical thinking—and how these perceptions shape their continued engagement with AI tools.
+Although the existing literature explores AI's technological capabilities and instructional applications, fewer studies focus on student-reported experiences and behavioral decisions, especially in writing-intensive college courses \cite{willia2024ai, chan2023students}. This study addresses this gap by investigating student perceptions of AI’s usefulness in writing and comprehension in the IT Professional Ethics and Practices course at Georgia Gwinnett College. Conducted in Fall 2024 and Spring 2025, this study followed a three-phase structure: —no AI use, required AI use, and optional continued use—within an upper-division IT ethics course required for all Information Technology concentrations. The course emphasizes professional responsibility, global IT ethics, and collaboration through student-led discussions and real-world case studies. The research aimed to examine whether students viewed AI as a tool for efficiency, a learning scaffold, or a barrier to critical thinking, and how these perceptions shaped their continued engagement with AI tools. Of 128 invited students, 111 completed the end-of-semester survey, yielding an 87\% response rate.
 
 \section{Background}
 
-Georgia Gwinnett College (GGC) is a four-year public institution within the university system of Georgia in the southeastern United States, established in 2005 to expand access to higher education in the Atlanta metropolitan area it serves. As the youngest institution in the system, it has rapidly grown from 118 students in its inaugural 2006 cohort to approximately 12,000 students by 2025. Accredited by a regional accrediting body, the institution offers over twenty-seven majors and more than sixty programs of study across six academic schools.
-
-GGC is federally designated as a Hispanic-Serving Institution (HSI), with over 25\% of its student population identifying as Hispanic/Latino \cite{ggcInstitutionalProfile}. It is also recognized as one of the most ethnically diverse institutions in the Southern region of the United States, serving a student body that is majority non-white, with substantial representation from Black/African American, Asian, and first-generation college students. As an open-access college, it plays a critical role in promoting educational equity and social mobility for traditionally underserved populations.
-
-This study was conducted in an upper-division undergraduate ethics course required for all five concentrations within the Bachelor of Science in Information Technology (IT) program. These concentrations include Software Development, Systems and Cybersecurity, Data Science and Analytics, Digital Media, and Enterprise Systems. The course emphasizes professional responsibility, global IT ethical issues, collaboration, and critical thinking. Delivered through student-led discussions and real-world case studies, it provides students with the tools to evaluate ethical dilemmas in contemporary IT practice.
-
-During the study period, five sections of the course were offered, each with an initial enrollment of approximately 26 students. A total of 128 students were invited to participate in the study, with 111 completing the end-of-semester survey—resulting in an 87\% participation rate.
-
+Georgia Gwinnett College (GGC), founded in 2005 as part of the University System of Georgia, is a four-year public institution serving the Atlanta metropolitan area. With enrollment growing from 118 students in 2006 to nearly 12,000 by 2025, GGC offers over 27 majors across 6 schools. Designated as a Hispanic-Serving Institution (HSI) with over 25\% Hispanic/Latino students~\cite{ggcInstitutionalProfile}, it is among the most ethnically diverse colleges in the region.
 
 \section{Methodology}
 
 \subsection{Course Structure}
-The course employs a student-led, discussion-based approach, where students submit chapter analyses, engage in peer-led discussions, and participate in interactive activities. The structure includes three key components: chapter analyses, discussions, and interactive activities, all of which combined with the emphasis on writing and critical thinking provide an ideal framework for assessing the effectiveness of AI in enhancing writing quality, comprehension, and engagement in academic discussions.
-The chapter analysis serves as a preparatory assignment designed to enhance comprehension and critical thinking. It consists of three sections:  1) a summary, 2) key points and 3) a personal opinion – A reflective section where students express their personal stance on the topic, supported by reasoning and case studies. Class discussions provide students with the opportunity to share their perspectives, engage with peers’ viewpoints, discuss different scenarios, and critically evaluate ethical issues in IT. Following the discussion, students participate in interactive activities designed and led by a peer group. These activities vary in format, including case studies, role-playing scenarios, debates, or simulations. The goal is to provide an engaging, experiential learning environment where students can apply theoretical concepts to real-world ethical dilemmas. The flexibility in activity design allows for creativity and promotes active participation, reinforcing students’ understanding of course material through experiential learning.
+The course follows a student-led, discussion-based format integrating chapter analyses, peer discussions, and interactive activities to promote writing, critical thinking, and engagement. Each chapter analysis includes three sections: 1) summary, 2) key points, and 3) reflective opinion supported by reasoning and case studies. Class discussions encourage students to exchange perspectives and evaluate ethical issues in IT, while peer-led activities such as case studies, debates, and simulations provide experiential learning opportunities that connect theory to real-world ethical dilemmas.
 
 \subsection{Method of Study}
 Students were required to submit eight chapter analysis papers, with AI usage controlled in specific phases to assess its effects on efficiency, writing quality, and comprehension.
@@ -70,52 +62,16 @@ For the first two chapter analyses, students were instructed to complete their a
 For the next four chapter analyses, students were required to use AI tools of their choice, including those for grammar improvement (e.g., Grammarly) and/or text generation (e.g., ChatGPT). The grading criteria remained consistent with the previous phase. This phase aimed to assess how AI-assisted writing influenced efficiency, writing quality, and understanding of the course material, as well as learning about the array of AI tools students were using.
 
 \subsection*{Phase 3: Student Choice}
-For the final two chapter analyses, students were given the option to either continue using AI tools or return to writing their analyses independently. This phase was designed to examine whether students perceived AI as a beneficial tool after their initial experiences, offering insight into their voluntary adoption of AI for academic work.
+For the final two chapter analyses, students were given the option to either continue using AI tools or return to writing their analyses independently. This phase examined whether they viewed AI as beneficial after initial use, offering insight into voluntary adoption for academic work.
 
-Following the submission of the final chapter analysis, students were asked to complete a 13-question anonymous survey. The survey questions aimed to gather qualitative and quantitative data on their experiences, including, AI usage patterns (grammar improvement, text generation, or both), perceived efficiency in completing assignments, impact on comprehension of chapter topics, self-reported changes in writing quality, and willingness to continue using AI in academic work.
+After submitting the final analysis, students completed a 13-question anonymous survey capturing qualitative and quantitative data on AI usage (grammar, text generation, or both), perceived efficiency, impact on comprehension, changes in writing quality, and willingness to continue using AI.
 
 \section{Results and discussion}
-\textbf{AI Usage Patterns.} Our first research question examined how students utilized AI—specifically whether they used it for grammar correction, text generation, or both. The combined results from Fall 2024 and Spring 2025 indicate that AI was used for multiple purposes. A majority of students (61\%) reported using AI for both grammar and text generation. Additionally, 27\% used AI exclusively for generating text, while 12\% used it only for grammar correction. These findings suggest that most students viewed AI as a comprehensive support tool for writing, rather than a single-function aid.
+\textbf{AI Usage Patterns.} The first research question examined how students used AI—for grammar correction, text generation, or both. Combined results show that 61\% used AI for both purposes, 27\% for text generation only, and 12\% for grammar correction only, indicating that most students viewed AI as a comprehensive writing support tool.
 
-\begin{table}[ht]
-\caption{AI Usage by Function (Fall 2024--Spring 2025 Combined)} % title of Table
-\label{table:aiusage} % reference label
-\centering % used for centering table
-\begin{tabular}{l c} % two columns
-\hline\hline % double horizontal line
-AI Usage Type & Percentage of Students \\ [0.5ex] % table heading
-\hline % single line
-Both Grammar and Generating Text & 61\% \\
-Generating Text Only & 27\% \\
-Grammar Only & 12\% \\ [1ex] % [1ex] adds extra vertical space after last row
-\hline % single line
-\end{tabular}
-\end{table}
-
-\textbf{AI Impact on Efficiency.} The second research question examined whether using AI made the chapter analysis process more efficient. According to combined results from Fall 2024 and Spring 2025, 47\% of students reported that using AI resulted in significantly less time needed to complete their assignments, while another 41\% indicated it took less time. Only 6\% observed no change, and a small number—4\% and 2\%, respectively—reported that AI actually increased the time required.
-
-These results show that nearly 88\% of students experienced greater efficiency using AI, supporting the idea that AI tools function as a useful productivity aid. Minor inefficiencies may stem from unfamiliarity with AI tools or time spent revising AI-generated content to align with students' personal writing styles.
-
-\begin{table}[h]
-\caption{Impact of AI on Time Required to Complete Assignments (Fall 2024--Spring 2025 Combined)} % title of Table
-\label{table:aitimeimpact} % reference label
-\centering % used for centering table
-\begin{tabular}{l c} % two columns
-\hline\hline % double horizontal line
-Response & Percentage of Students \\ [0.5ex] % table heading
-\hline % single line
-Significantly Less Time Using AI & 47\% \\
-Less Time Using AI & 41\% \\
-No Difference (Time was the Same) & 6\% \\
-More Time Using AI & 4\% \\
-Significantly More Time Using AI & 2\% \\ [1ex] % adds vertical space
-\hline % single line
-\end{tabular}
-\end{table}
+\textbf{AI Impact on Efficiency.} The second research question explored whether AI improved efficiency in completing chapter analyses. Across both semesters, 47\% of students reported significantly less time spent, and 41\% reported less time overall. Only 12\% saw no improvement or increased time. Thus, nearly 88\% experienced greater efficiency, confirming AI’s value as a productivity aid, with minor delays linked to tool familiarity or content revision.
 
 \textbf{AI Tools Used for Grammar Improvement and Text Generation} Research Questions 3 and 6 examined which AI tools students used to either improve grammar or generate content in their chapter analyses. Figure~\ref{paper_template/Figures/fig:ai_tool_usage} compares the top tools used across both purposes, based on combined data from Fall 2024 and Spring 2025.
-
-The most widely used tool for both tasks was \textbf{ChatGPT}, utilized by 50 students for grammar and 74 students for text generation. \textbf{Grammarly} followed, with 32 students using it for grammar and 17 for generation. Other tools with notable usage include \textbf{QuillBot}, \textbf{Gemini}, and \textbf{Copilot}, all of which were used more frequently for text generation rather than for grammar assistance.
 
 This comparison reveals that while students often use the same tools for multiple functions, their frequency of use differs significantly depending on task. ChatGPT dominates in text generation, while Grammarly holds stronger for grammar refinement. The diversity of additional tools—including \textit{Perplexity}, \textit{Claude}, \textit{META}, and \textit{PowerPoint Summarizer}—suggests students are experimenting with different platforms to find the most suitable support for their writing needs.
 
@@ -126,9 +82,11 @@ This comparison reveals that while students often use the same tools for multipl
     \label{paper_template/Figures/fig:ai_tool_usage}
 \end{figure}
 
-\textbf{Impact of AI on Grammar, Writing Quality, and Topic Comprehension} The fourth research question assessed whether students found AI helpful in improving grammar and writing quality in their chapter analysis submissions. As shown in Figure~\ref{fig:ai_impact}, most students reported positive effects: 19\% indicated a significant improvement, 46\% reported improvement, and 28\% noted slight improvement. Only 7\% of students stated that AI did not help. These findings align with the demographic characteristics of GGC’s student body, which includes a high percentage of first-generation and non-native English-speaking students. AI likely served as a valuable support tool for language refinement and structural clarity.
+\textbf{Impact of AI on Grammar, Writing Quality, and Topic Comprehension}  
+The fourth research question examined whether students found AI helpful in improving grammar and writing quality. As shown in Figure~\ref{fig:ai_impact}, 19\% reported significant improvement, 46\% improvement, and 28\% slight improvement, while only 7\% saw no benefit. These results reflect GGC’s diverse student population, where AI likely supported language refinement and writing clarity for first-generation and non-native English speakers.
 
-The fifth research question explored whether AI-assisted grammar and writing improvements also supported students' comprehension of the course material. Among participants, 16\% reported significantly improved understanding, and 39\% reported general improvement. About one-third (32\%) indicated no difference, while smaller segments experienced a decrease (8\%) or significant decrease (5\%) in understanding. These results suggest that AI's role in enhancing writing may also contribute to clearer conceptual understanding—though a subset of students may have relied on AI outputs without engaging deeply with the chapter content.
+The fifth question explored AI’s influence on topic comprehension. Overall, 16\% reported significant improvement, 39\% general improvement, and 32\% no change, while 13\% noted decreased understanding. These findings suggest AI can enhance comprehension when used actively, though some students may rely on outputs without fully engaging with the material.
+
 
 \begin{figure}[h]
   \centering
@@ -137,9 +95,8 @@ The fifth research question explored whether AI-assisted grammar and writing imp
   \label{fig:ai_impact}
 \end{figure}
 
-\textbf{Impact of AI on Student Engagement with Learning Materials} Research Question 7 explored whether the use of AI-generated text influenced students’ reading habits. As shown in Table~\ref{tab:reading_habits}, half of the students (50\%) reported spending less time reading the chapter when using AI, while 10\% admitted to skipping reading altogether. However, 29\% read the chapter the same as when not using AI, and an additional 11\% spent more time reading—4\% significantly more and 7\% more.
-
-These findings suggest that although many students leaned on AI to streamline their work—perhaps by relying on summaries or generated drafts, a meaningful portion still engaged with the source material. This reflects a broader trend toward more concise, hybrid learning formats that blend AI use with traditional study habits. The 39\% who maintained or increased their reading signal that AI is not entirely displacing deep engagement for all students. This supports the importance of guided and balanced AI integration in education, ensuring students refine their understanding rather than bypass it.
+\textbf{Impact of AI on Student Engagement with Learning Materials}  
+Research Question 7 examined whether AI-generated text affected students’ reading habits. As shown in Table~\ref{tab:reading_habits}, 50\% reported spending less time reading, and 10\% skipped reading entirely. Meanwhile, 29\% maintained their usual reading time, and 11\% read more. These results indicate that while many students used AI to streamline work, a notable portion continued engaging with course materials. The 39\% who maintained or increased reading time suggest that AI does not completely replace active learning, underscoring the value of guided integration to promote meaningful engagement.
 
 \begin{table}[h]
 \caption{Student Reading Habits When Using AI to Generate Text} % title of Table
@@ -158,52 +115,18 @@ Did Not Read the Chapter at All When Using AI & 10\% \\ [1ex]
 \end{tabular}
 \end{table}
 
-\textbf{Student Modification of AI-Generated Text} Research Question 8 examined whether students revised the content generated by AI tools. As shown in Table~\ref{tab:ai_text_modification}, a strong majority of students (78\%) reported modifying the text before submission—19\% significantly modified it, and 59\% made some modifications. In contrast, 22\% submitted the generated text without making any changes.
+\textbf{Student Modification of AI-Generated Text}  
+Research Question 8 explored whether students revised AI-generated content. Most (78\%) modified the text before submission—19\% extensively and 59\% partially—while 22\% submitted it unchanged. These results indicate that most students critically engaged with the AI output, using it as a support tool rather than a substitute for their own ideas.
 
-These findings suggest that most students actively engaged with the AI-assisted content—reading, evaluating, and refining it to reflect their own understanding and opinion. This behavior points to a level of accountability and critical thinking in how AI is being used as a support tool. On the other hand, students who submitted AI-generated responses without modification may have been motivated by efficiency or lacked confidence in editing the material. Overall, the results reinforce that AI, when used ethically and responsibly, can enhance student engagement without displacing their individual contributions.
 
-\begin{table}[h]
-\caption{Student Modification of AI-Generated Text} % title of Table
-\label{tab:ai_text_modification} % reference label
-\centering % used for centering table
-\begin{tabular}{l c} % two columns
-\hline\hline % double horizontal line
-Behavior & Combined (\%) \\ [0.5ex] % table heading
-\hline % single line
-Significantly Modified the Text Generated by AI & 19\% \\
-Modified the Text Generated by AI & 59\% \\
-Did Not Modify the Text Generated by AI & 22\% \\ [1ex]
-\hline % single line
-\end{tabular}
-\end{table}
-
-\textbf{Retention of Student Perspective in Personal Opinion Writing} Research Question 9 examined whether students retained their personal voice when using AI-generated text. As shown in Table~\ref{tab:opinion_writing}, 62\% of students reported writing their own opinions, while 21\% modified AI-generated opinions. Only 17\% submitted AI-generated opinions without alteration.
-
-These results are encouraging, indicating that over 80\% of students engaged intellectually with the assignment—either by writing their own ideas or critically editing AI outputs. This suggests that most students view AI as a writing aid rather than a replacement for their own reflection. The 17\% who submitted unmodified content may reflect a more convenience-based approach, but the broader trend supports the notion that AI can support, rather than diminish, authentic student voice when integrated thoughtfully.
-
-\begin{table}[h]
-\caption{Retention of Student Voice in AI-Assisted Opinion Writing} % title of Table
-\label{tab:opinion_writing} % reference label
-\centering % used for centering table
-\begin{tabular}{p{7.5cm} c} % two columns, first with fixed width
-\hline\hline % double horizontal line
-Behavior & Combined (\%) \\ [0.5ex] % table heading
-\hline % single line
-I Still Wrote My Own Personal Opinion & 62\% \\
-I Modified the Opinion that AI Wrote & 21\% \\
-I Did Not Write My Own Personal Opinion, AI Wrote the Opinion & 17\% \\ [1ex]
-\hline % single line
-\end{tabular}
-\end{table}
+\textbf{Retention of Student Perspective in Personal Opinion Writing} Research Question 9 explored whether students retained their personal voice when using AI-generated text. Overall, 62\% wrote their own opinions, 21\% modified AI-generated ones, and only 17\% submitted unaltered content. These results indicate that most students critically engaged with AI, treating it as a writing aid rather than a substitute for personal reflection, while a small portion relied on it primarily for convenience.
 
 \textbf{Impact of AI-Generated Text on Topic Comprehension}
-Research Question 10 explored whether AI-generated text improved students’ understanding of course content. As shown in Figure~\ref{fig:ai_q10_q11}, a majority (58\%) reported enhanced comprehension—17\% significantly and 41\% moderately. Meanwhile, 28\% saw no change, and 15\% experienced a decrease (11\% decreased, 4\% greatly decreased).
+Research Question 10 examined whether AI-generated text improved students’ understanding of course content. As shown in Figure~\ref{fig:ai_q10_q11}, 58\% reported improved comprehension (17\% significantly, 41\% moderately), 28\% did not see a change, and 15\% reported a decrease. These results suggest that AI can clarify complex ideas when used thoughtfully, though over-reliance may hinder deeper engagement.
 
-These findings suggest that AI can support learning by clarifying complex ideas and reinforcing key concepts. However, the decrease in comprehension for some students may reflect over-reliance on AI, potentially reducing active engagement with the material. Overall, the results highlight AI’s potential to enhance both efficiency and depth of understanding when used thoughtfully.
 
-\textbf{Impact of AI on Class Participation Preparedness} Research Question 11 examined how AI use influenced students' readiness for class discussions and activities. As shown in Figure~\ref{fig:ai_q10_q11}, 51\% of students felt more or significantly more prepared—13\% significantly more and 38\% more. In contrast, 18\% felt less prepared and 3.64\% significantly less prepared, while 27\% reported no difference.
+\textbf{Impact of AI on Class Participation Preparedness} Research Question 11 explored how AI use affected students’ readiness for class discussions. As shown in Figure~\ref{fig:ai_q10_q11}, 51\% felt more prepared (13\% significantly), 27\% saw no change, and 22\% felt less prepared. These results suggest that AI can enhance confidence and conceptual readiness, though over-reliance may reduce genuine engagement.
 
-This finding is among the most notable of the study, highlighting AI’s role not only in supporting written assignments but also in boosting students’ confidence and conceptual readiness for in-class engagement. AI may have helped students organize their thoughts and clarify their understanding, leading to more meaningful participation. Those who felt less prepared may have relied too heavily on AI without fully engaging with the content. Overall, the results underscore AI’s potential as a valuable tool for enhancing academic preparedness and participation.
 
 
 \begin{figure}[h]
@@ -213,28 +136,12 @@ This finding is among the most notable of the study, highlighting AI’s role no
 \label{fig:ai_q10_q11}
 \end{figure}
 
-\textbf{Student Choice to Continue Using AI} Research Question 12 examined whether students would continue using AI tools when their use was no longer required in the final two chapters. As shown in Table~\ref{tab:continue_ai}, a significant 81\% of students chose to continue using AI, while only 19\% opted not to.
+\textbf{Student Choice to Continue Using AI} Research Question 12 explored whether students continued using AI when it was no longer required. Most (81\%) chose to do so, indicating clear perceived benefits in grammar, efficiency, and comprehension. This voluntary adoption suggests that students view AI as a lasting learning aid, similar to calculators in its integration into academic practice.
 
-This strong rate of voluntary adoption reinforces earlier findings that students perceived clear benefits from AI—ranging from improved grammar and efficiency to enhanced comprehension and class preparedness. Importantly, the choice to continue using AI suggests that students viewed these tools not simply as an academic requirement, but as a meaningful aid in their learning process. Much like the historical integration of calculators in education, AI appears to be gaining lasting traction as a support mechanism for student productivity and engagement.
 
-\begin{table}[h]
-\caption{Student Decision to Continue Using AI When It Was Not Required} % title of Table
-\label{tab:continue_ai} % reference label
-\centering % used for centering table
-\begin{tabular}{l c} % two columns
-\hline\hline % double horizontal line
-Behavior & Combined (\%) \\ [0.5ex] % table heading
-\hline % single line
-Yes, continued to use AI & 81\% \\
-No, did not continue to use AI & 19\% \\ [1ex]
-\hline % single line
-\end{tabular}
-\end{table}
+\textbf{Student Rationale for Continuing or Discontinuing AI Use}  
+Research Question 13 examined students’ reasons for continuing or discontinuing AI use based on open-ended responses from Fall 2024. As shown in Tables~\ref{tab:reasons_continue} and~\ref{tab:reasons_discontinue}, most (80\%) continued using AI, citing efficiency, improved comprehension, ease of use, and writing support. Many used AI for initial drafts they later refined, noting reduced stress and benefits for learners with ADHD or limited English proficiency.
 
-\textbf{Student Rationale for Continuing or Discontinuing AI Use}
-Research Question 13 explored why students chose to either continue or discontinue the use of AI during the final phase of the study. This analysis was conducted using open-ended responses collected from students in Fall 2024 only. Responses were thematically coded and grouped into key motivations, which are presented in Tables~\ref{tab:reasons_continue} and~\ref{tab:reasons_discontinue}.
-
-Among the 80\% of students who continued using AI, many cited increased efficiency, improved comprehension, ease of use, and writing support as the most valuable benefits. Students described AI as a useful starting point that allowed them to generate initial drafts, which they would then refine and personalize. Several emphasized how AI helped reduce stress and manage workloads. Others noted that AI was particularly helpful for those facing learning challenges, such as ADHD or non-native English proficiency.
 
 \begin{table}[h]
 \caption{Reasons for Continuing AI Use (Fall 2024)} % title of Table
@@ -256,7 +163,8 @@ Mixed Ethics & 2\% & ``Helpful, but I know it can also be misused.'' \\ [1ex]
 \end{tabular}
 \end{table}
 
-In contrast, the 20\% who discontinued AI use voiced concerns about learning depth, class preparedness, and ownership of ideas. These students often felt disconnected from the material when using AI and preferred to engage more directly with the chapter content to retain information and participate meaningfully in class discussions.
+In contrast, the 20\% who discontinued AI use cited concerns about learning depth, preparedness, and ownership of ideas, preferring direct engagement with course content. Overall, these insights show that while students valued AI’s convenience, many also recognized its limits, emphasizing the need for guided and ethical integration in education.
+
 
 \begin{table}[h]
 \caption{Reasons for Discontinuing AI Use (Fall 2024)} % title of Table
@@ -275,26 +183,12 @@ Instruction & 10\% & ``Professor said so, I think.'' \\ [1ex]
 \end{tabular}
 \end{table}
 
-Overall, these qualitative insights reveal that while students recognized the practical benefits of AI, they also demonstrated awareness of its limitations. The findings reflect a thoughtful balance between convenience and deeper engagement, underscoring the need for guided, ethical integration of AI in academic settings.
+\section{Conclusion and Future Work}
 
-\section{Limitations and Future Research}
-While this study offers valuable insight into student perceptions of AI-assisted writing, several limitations should be noted. First, the research was conducted at a single institution, within one course, and taught by a single instructor, limiting the generalizability of findings to other academic contexts. Additionally, the absence of a control group makes it difficult to attribute changes in student behavior solely to AI use, as improvements may also stem from increased familiarity with course expectations over time. The use of AI tools was loosely regulated—students selected their preferred platforms and methods of use—which, while authentic, introduced variability that may affect consistency in outcomes. Furthermore, students were not provided with formal guidance on how to effectively utilize AI, potentially limiting the tools' benefits or leading to inconsistent usage. Finally, the study did not collect demographic data such as gender, classification, or language background, which restricts the ability to assess how different student populations may experience AI's impact, particularly for non-native English speakers or first-generation students. Future studies should address these limitations by including multiple courses and institutions, establishing control groups, offering structured AI instruction, and collecting demographic data to enable more nuanced subgroup analysis. 
+This study examined how IT students perceive and use AI tools to enhance writing and comprehension. Conducted in one upper-division IT ethics course, most students reported improved efficiency, understanding, and engagement. At Georgia Gwinnett College, AI particularly supported first-generation and non-native English speakers in developing writing clarity and structure.
 
-\section{Conclusion}
-This study provides timely and comprehensive insight into how undergraduate students perceive and utilize AI tools to support academic writing and comprehension. Drawing on data from both Fall 2024 and Spring 2025 cohorts in a student-led IT ethics course, the findings reflect consistent trends in AI adoption, perceived benefit, and critical engagement.
+Over 80\% of students revised or expanded AI-generated content, showing active learning rather than reliance. While results highlight the value of guided AI use, the study’s single-course scope and lack of control group limit generalization. Future research should include multiple courses, comparative groups, and structured AI instruction to assess long-term impacts on learning.
 
-Students overwhelmingly reported increased efficiency, enhanced understanding of chapter topics, and greater preparedness for class discussions when using AI—whether for grammar support, text generation, or both. A notable 88\% cited time savings, largely attributed to reduced reliance on full chapter readings. Despite reading less, over 57\% of students reported improved comprehension, suggesting that AI served as an effective tool for clarifying and reinforcing complex material.
-
-This is particularly significant at GGC, where a substantial portion of the student body includes first-generation college students and non-native English speakers. For these learners, AI appears to offer meaningful support in navigating linguistic challenges and structuring academic responses.
-
-Critically, most students engaged with AI-generated content by modifying and personalizing it—nearly 80\% revised the output, and over 61\% wrote their own personal opinions even when using AI to assist. These behaviors reinforce that students are not simply copying AI-generated responses but are using the tools to enhance their own thinking and expression. The relatively small percentage of students who submitted content without revision (approximately 22\%) suggests room for instructional focus on responsible use.
-
-Importantly, 51\% of students felt more prepared to engage in class discussions after using AI, and 81\% chose to continue using it even when it was no longer required—demonstrating both perceived value and sustainable utility. Qualitative feedback further revealed a thoughtful awareness among students of both the strengths and limitations of AI, with themes ranging from improved time management and accessibility to concerns about comprehension and authenticity.
-
-Overall, the results affirm that AI, when used thoughtfully and ethically, can enhance writing efficiency, support deeper understanding, and promote student ownership of work. However, these benefits are contingent upon responsible integration. Educators have an essential role in helping students navigate the balance between leveraging AI and preserving independent thought and academic integrity.
-
-As AI tools continue to evolve and proliferate, future research should explore their long-term effects across diverse disciplines and student populations. This will be essential to ensuring that AI integration enriches, rather than compromises, core educational outcomes.
-  
 
 \medskip
 
